--- a/Project_2.ipynb
+++ b/Project_2.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# Fake/Real News data analysis and classification\n",
-        "Ευάγγελος Δημητριάδης</br>\n",
+        "Ευάγγελος Δημητριάδης\n",
         "1115201700287"
       ]
     },
@@ -132,7 +132,7 @@
         "id": "5gYx21ZK6CNY"
       },
       "source": [
-        "# Data analysis:"
+        "# Data exploration:"
       ]
     },
     {
